--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     -->
     <title>Age Test</title>
   </head>
-  <script
+  <!-- <script
     async="async"
     src="https://www.google.com/adsense/search/ads.js"
   ></script>
@@ -52,6 +52,7 @@
         (g[o]["t"] = 1 * new Date());
     })(window, "_googCsa");
   </script>
+  -->
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
@@ -67,7 +68,7 @@
     -->
     <div id="afscontainer1"></div>
 
-    <script type="text/javascript" charset="utf-8">
+    <!-- <script type="text/javascript" charset="utf-8">
       var pageOptions = {
         pubId: "pub-9616389000213823", // Make sure this the correct client ID!
         query: "hotels",
@@ -81,6 +82,6 @@
       };
 
       _googCsa("ads", pageOptions, adblock1);
-    </script>
+    </script> -->
   </body>
 </html>
