--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 
   <!-- other head elements from your page -->
 
-  <script type="text/javascript" charset="utf-8">
+  <!-- <script type="text/javascript" charset="utf-8">
     (function (g, o) {
       (g[o] =
         g[o] ||
@@ -51,7 +51,7 @@
         }),
         (g[o]["t"] = 1 * new Date());
     })(window, "_googCsa");
-  </script>
+  </script> -->
   -->
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -66,7 +66,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <div id="afscontainer1"></div>
+    <!-- <div id="afscontainer1"></div> -->
 
     <!-- <script type="text/javascript" charset="utf-8">
       var pageOptions = {
