--- a/public/index.html
+++ b/public/index.html
@@ -8,21 +8,12 @@
     <meta
       name="description"
       content="Web site created using create-react-app"
-      <!--
-      <link
-      rel="apple-touch-icon"
-      href="%PUBLIC_URL%/logo192.png"
     />
-    -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap"
-      rel="stylesheet"
-    />
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -35,7 +26,6 @@
     -->
     <title>Age Test</title>
   </head>
-
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
